--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "classnames": "^2.5.1",
+    "firebase": "^10.8.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-inlinesvg": "^4.1.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
