--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-inlinesvg": "^4.1.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-textarea-autosize": "^8.5.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
